--- a/app/assets/stylesheets/partials/modules/_stores-list.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-list.scss
@@ -71,7 +71,10 @@
       }
     }
 
-      a {color: $color-dark-txt;}
+      a {
+        color: $color-dark-txt;
+        display: block;
+      }
 
     /* Phone no at non-palm */
     span {
