--- a/app/views/shared/_micello_map_popup.html.erb
+++ b/app/views/shared/_micello_map_popup.html.erb
@@ -1,5 +1,5 @@
 <%# FIXME: This really needs to be moved to something that can handle templating in JS better %>
-<div class="map-micello__overlay islet js-toggle-logo-image">
+<div class="map-micello__overlay islet js-toggle-store-logo">
   <div class="map-micello__overlay__retailer map-micello__mrg-base">
     <div class="map-micello__overlay__retailer__img">
       #{store.logo}
@@ -9,7 +9,7 @@
       <p>Open till <time datetime="#{store.closing_time_24}">#{store.closing_time_12}</time> tonight</p>
     </div>
   </div>
-  <a href="<%= centre_store_path(id: '') %>#{store.id}" class="map-micello__overlay__cta btn btn--full btn--main js-pjax-link js-stores-maps-toggle-btn"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</a>
+  <a href="<%= centre_store_path(id: '') %>#{store.id}" class="map-micello__overlay__cta btn btn--full btn--main js-pjax-link-stores js-stores-maps-toggle-btn"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</a>
   <button class="map-micello__overlay__cta btn btn--full btn--main btn--main-alt js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</button>
 </div>
 <span class="map-micello__overlay__close icon icon--close-sml icon--xlrg icon--flush-top" aria-hidden="true"></span>
