--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -3,174 +3,194 @@
 <div class="stores-maps stores-maps--detail container js-stores-maps-toggle-wrap">
 
   <%# Contain 'back to listing link' and 'store details' %>
-  <div class="stores-maps__inner js-pjax-container" id="stores-maps-toggle-listing-detail">
+  <div class="js-pjax-container-stores">
+    <%# FIXME: [BACKEND] inject this preloader whilst waiting for index page to load via PJAX %>
+    <%#<span class="preloader preloader--middle preloader--light js-disabled-hide">
+      <span class="preloader__spinner"></span>
+      <em class="hide-visually">Loading, please wait&#8230;</em>
+    </span>%>
 
-    <%# Back to listing link %>
-    <div class="stores-maps__filters-toggle">
-      <div class="container">
-        <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate js-pjax-link"><span><span class="icon icon--arrow-left-big" aria-hidden="true"></span> Stores A-Z</span> / <%= @store.name %></a>
+    <div class="stores-maps__inner stores-maps__inner--detail" id="stores-maps-toggle-listing-detail">
+
+      <%# Back to listing link %>
+      <div class="stores-maps__filters-toggle">
+        <div class="container">
+          <%# Small view %>
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-alt4 btn--main-compact-icon js-pjax-link-stores">
+            <span class="hide-visually">View list</span>
+            <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
+          </a>
+          <%# //Small view %>
+          <%# Large view %>
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate js-pjax-link-stores"><span><span class="icon icon--arrow-left-big" aria-hidden="true"></span> Stores A-Z</span> / <%= @store.name %></a>
+          <%# //Large view %>
+        </div>
       </div>
-    </div>
-    <%# //Back to listing link %>
+      <%# //Back to listing link %>
 
-    <%# Store details %>
-    <div class="stores-maps__list-detail is-featured-items">
+      <%# Store details %>
+      <div class="stores-maps__list-detail">
 
-      <article class="storefront" role="article">
+        <article class="storefront" role="article">
 
-        <%# Header (flexslider) %>
-        <%= render @store.has_storefront? ? 'header_with_banner' : 'header_without_banner' %>
-        <%# //Header (flexslider) %>
+          <%# Header (flexslider) %>
+          <%= render @store.has_storefront? ? 'header_with_banner' : 'header_without_banner' %>
+          <%# //Header (flexslider) %>
 
-        <%# Store details %>
-        <div class="storefront__details">
+          <%# Store details %>
+          <div class="storefront__details">
 
-          <%# Inner container %>
-          <div class="container">
+            <%# Inner container %>
+            <div class="container">
 
-            <%# Store meta %>
-            <dl class="storefront__details__meta">
+              <%# Store meta %>
+              <dl class="storefront__details__meta">
 
-              <dt class="hide-visually">Opening hours</dt>
-              <%- if @store.closing_time.present? %>
-                <dd class="storefront__details__meta__no-indent">Open till <%= twelve_hour_format @store.closing_time %> tonight</dd>
-              <%- else %>
-                <dd class="storefront__details__meta__no-indent">Closed today</dd>
-              <%- end %>
+                <%- if @store.closing_time.present? %>
+                  <dt class="hide-visually">Opening hours</dt>
+                  <dd class="storefront__details__meta__no-indent">Open till <time datetime="<%= @store.closing_time %>"><%= twelve_hour_format @store.closing_time %></time> tonight</dd>
+                <%- else %>
+                  <dd class="storefront__details__meta__no-indent">Closed today</dd>
+                <%- end %>
 
-              <%- if @store.phone_number.present? %>
-                <dt class="hide-visually hide-fully--palm">Store phone number</dt>
-                <dd class="hide-fully--palm">
-                  <%= @store.phone_number %>
-                  <span class="icon icon--phone2 icon--xlrg" aria-hidden="true"></span>
-                </dd>
-              <%- end %>
+                <%- if @store.phone_number.present? %>
+                  <dt class="hide-visually hide-fully--palm">Store phone number</dt>
+                  <dd class="hide-fully--palm">
+                    <%= @store.phone_number %>
+                    <span class="icon icon--phone2 icon--xlrg" aria-hidden="true"></span>
+                  </dd>
+                <%- end %>
 
-              <%- if @store.email_address.present? %>
-                <dt class="hide-visually">Store email</dt>
-                <dd class="txt-truncate">
-                  <%= link_to @store.email_address, "mailto:#{@store.email_address}" %>
-                  <span class="icon icon--email icon--xlrg" aria-hidden="true"></span>
-                </dd>
-              <%- end %>
+                <%- if @store.email_address.present? %>
+                  <dt class="hide-visually">Store email</dt>
+                  <dd class="txt-truncate">
+                    <%= link_to @store.email_address, "mailto:#{@store.email_address}" %>
+                    <span class="icon icon--email icon--xlrg" aria-hidden="true"></span>
+                  </dd>
+                <%- end %>
 
-              <dt class="hide-visually">Westfield gift card</dt>
-              <dd>
-                <%= @store.accepts_giftcard? ? 'Gift card accepted' : 'Not accepted' %>
-                <span class="icon icon--gift-card icon--xlrg" aria-hidden="true"></span>
-              </dd>
-            </dl>
-            <%# //Store meta %>
+                <%- if @store.accepts_giftcard.present? %>
+                  <dt class="hide-visually">Westfield gift card</dt>
+                  <dd>
+                    Gift card accepted
+                    <span class="icon icon--gift-card icon--xlrg" aria-hidden="true"></span>
+                  </dd>
+                <%- end %>
+              </dl>
+              <%# //Store meta %>
 
-            <%# Icon links - store phone no and location %>
-            <div class="storefront__details__phone-map storefront-storelist-phone-map-links">
+              <%# Icon links - store phone no and location %>
+              <div class="storefront__details__phone-map storefront-storelist-phone-map-links">
 
-              <%# Phone no %>
-              <a href="tel:<%= (@store.phone_number || '').gsub(/\s+/, '') %>" class="storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--phone hide-fully--non-palm">
-                <span class="hide-visually">Call store: <%= @store.phone_number %></span>
-                <span class="icon icon--phone2 icon--flush-top storefront-storelist-phone-map-links__cell__valign"></span>
-              </a>
-              <%# //Phone no %>
+                <%# Phone no %>
+                <%- if @store.phone_number.present? %>
+                  <a href="tel:<%= (@store.phone_number || '').gsub(/\s+/, '') %>" class="storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--phone hide-fully--non-palm">
+                    <span class="hide-visually">Call store: <%= @store.phone_number %></span>
+                    <span class="icon icon--phone2 icon--flush-top storefront-storelist-phone-map-links__cell__valign"></span>
+                  </a>
+                <%- end %>
+                <%# //Phone no %>
 
-              <%# Location %>
-              <a href="#infoDiv" class="storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--location" data-store-id="<%= @store.id %>">
-                <span class="storefront-storelist-phone-map-links__cell__valign">
-                  <span class="icon icon--pin icon--flush-top"></span>
-                  <span class="hide-visually">Store location</span>
-                </span>
-              </a>
-              <%# //Location %>
+                <%# Location %>
+                <a href="#infoDiv" class="storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--location" data-store-id="<%= @store.id %>">
+                  <span class="storefront-storelist-phone-map-links__cell__valign">
+                    <span class="icon icon--pin icon--flush-top"></span>
+                    <span class="hide-visually">Store location</span>
+                  </span>
+                </a>
+                <%# //Location %>
+
+              </div>
+              <%# //Icon links - store phone no and location %>
 
             </div>
-            <%# //Icon links - store phone no and location %>
+            <%# //Inner container %>
 
           </div>
-          <%# //Inner container %>
+          <%# //Store details %>
 
-        </div>
-        <%# //Store details %>
+          <%- if false %>
+          <%# 'Product' and 'Deal' tiles %>
+          <%# FIXME: [BACKEND] the following HTML won't be available for every store so do not render any of the HTML when this is the case or only render the applicable HTML e.g. either render 'Product' or 'Deal' tiles AND when they're tiles (any) append class `.is-featured-items` to `<div class="stores-maps__list-detail">` (server side) %>
+          <footer class="storefront__featured">
 
-        <%- if false %>
-        <%# 'Product' and 'Deal' tiles %>
-        <%# FIXME: [BACKEND] the following HTML won't be available for every store so do not render any of the HTML when this is the case or only render the applicable HTML e.g. either render 'Product' or 'Deal' tiles AND when they're tiles (any) append class `.is-featured-items` to `<div class="stores-maps__list-detail">` (server side) %>
-        <footer class="storefront__featured">
-
-            <%# 'Product' tiles %>
-            <div class="storefront__featured__item storefront__featured__item--products island island--top-btm">
-              <div class="container">
-                <h2 class="storefront__featured__hdr">Featured from <%= @store.name %></h2>
-                <div class="tiles-non-pinboard">
+              <%# 'Product' tiles %>
+              <div class="storefront__featured__item storefront__featured__item--products island island--top-btm">
+                <div class="container">
+                  <h2 class="storefront__featured__hdr">Featured from <%= @store.name %></h2>
                   <%# FIXME: [BACKEND] hacked this together so needs to be done properly and we only show 3 tiles or less %>
-                  <% 3.times do |n| %>
-                    <div class="tiles-non-pinboard__tile">
-                      <%= render partial: '/shared/tiles/product',
-                          layout: '/layouts/tile',
-                          locals: {result: Hashie::Mash.new(
-                            title: '',
-                            sku: '',
-                            retailer_code: '',
-                            primary_image: 'http://cs1.wol.io/img_resized/sheike-shimmer-ring/5736ff15e337203d4d7b9b960fb4e8eec30a06e7_182x182.jpg',
-                            kind: 'product',
-                            meta: Hashie::Mash.new(
+                  <div class="grid grid--gutter-half grid--flush">
+                    <% 3.times do |n| %>
+                      <div class="grid__item one-half non-palm-one-third">
+                        <%= render partial: '/shared/tiles/product',
+                            layout: '/layouts/tile',
+                            locals: {result: Hashie::Mash.new(
                               title: '',
-                              image: ''
+                              sku: '',
+                              retailer_code: '',
+                              primary_image: 'http://cs1.wol.io/img_resized/sheike-shimmer-ring/5736ff15e337203d4d7b9b960fb4e8eec30a06e7_182x182.jpg',
+                              kind: 'product',
+                              meta: Hashie::Mash.new(
+                                title: '',
+                                image: ''
+                              )
                             )
-                          )
-                      } %>
-                    </div>
-                  <% end %>
+                        } %>
+                      </div>
+                    <% end %>
+                  </div>
+                  <%# FIXME: [BACKEND] make URL dynamic %>
+                  <a href="#" class="storefront__featured__view-more">View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
                 </div>
-                <%# FIXME: [BACKEND] make URL dynamic %>
-                <a href="#" class="storefront__featured__view-more">View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
               </div>
-            </div>
-            <%# //Product tiles %>
+              <%# //Product tiles %>
 
-            <%# Deal tiles %>
-            <div class="storefront__featured__item storefront__featured__item--deals island island--top-btm">
-              <div class="container">
-                <h2 class="storefront__featured__hdr">Deals from <%= @store.name %></h2>
-                <div class="tiles-non-pinboard">
-                  <%# FIXME: [BACKEND] hacked this together so needs to be done properly and we only show 3 tiles or less %>
-                  <% 3.times do |n| %>
-                    <div class="tiles-non-pinboard__tile">
-                      <%= render partial: '/shared/tiles/deal',
-                          layout: '/layouts/tile',
-                          locals: {result: Hashie::Mash.new(
-                            title: 'deal super #{n}',
-                            retailer_logo_url: 'http://image-service.systest.dbg.westfield.com/transform?ref=fcc997784861edcc4a1bd8abd93cb5930c75dacca267636afa4a5ff47d4c3693.gif',
-                            store_name: '',
-                            kind: 'deal',
-                            meta: Hashie::Mash.new(
-                              title: '',
-                              image: ''
+              <%# Deal tiles %>
+              <div class="storefront__featured__item storefront__featured__item--deals island island--top-btm">
+                <div class="container">
+                  <h2 class="storefront__featured__hdr">Deals from <%= @store.name %></h2>
+                  <div class="grid grid--gutter-half grid--flush">
+                    <%# FIXME: [BACKEND] hacked this together so needs to be done properly and we only show 3 tiles or less %>
+                    <% 3.times do |n| %>
+                      <div class="grid__item one-half non-palm-one-third">
+                        <%= render partial: '/shared/tiles/deal',
+                            layout: '/layouts/tile',
+                            locals: {result: Hashie::Mash.new(
+                              title: 'deal super #{n}',
+                              retailer_logo_url: 'http://image-service.systest.dbg.westfield.com/transform?ref=fcc997784861edcc4a1bd8abd93cb5930c75dacca267636afa4a5ff47d4c3693.gif',
+                              store_name: '',
+                              kind: 'deal',
+                              meta: Hashie::Mash.new(
+                                title: '',
+                                image: ''
+                              )
                             )
-                          )
-                      } %>
-                    </div>
-                  <% end %>
+                        } %>
+                      </div>
+                    <% end %>
+                  </div>
+                  <%# FIXME: [BACKEND] make URL dynamic %>
+                  <a href="#" class="storefront__featured__view-more">View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
                 </div>
-                <%# FIXME: [BACKEND] make URL dynamic %>
-                <a href="#" class="storefront__featured__view-more">View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
               </div>
-            </div>
-            <%# //Deal tiles %>
+              <%# //Deal tiles %>
 
-        </footer>
-        <%# Product and Deal tiles %>
-        <%- end %>
+          </footer>
+          <%# Product and Deal tiles %>
+          <%- end %>
 
-      </article>
+        </article>
+
+      </div>
+      <%#//Store details %>
+
+      <%= javascript_tag do %>
+        function storeMapPageReady() {
+          storeMapPage.store(<%= @store.id %>);
+        }
+      <% end %>
 
     </div>
-    <%#//Store details %>
-
-    <%= javascript_tag do %>
-      function storeMapPageReady() {
-        storeMapPage.store(<%= @store.id %>);
-      }
-    <% end %>
-
   </div>
   <%# //Contain 'back to listing link' and 'store details' %>
 
@@ -184,9 +204,14 @@
 
 <%- content_for :javascript do -%>
 
-  <%= javascript_include_tag 'store_map_page' %>
+  <%= javascript_include_tag 'stores_maps' %>
   <%= javascript_include_tag 'flexslider/jquery.flexslider' %>
   <%= javascript_tag do %>
+
+    // Add a hook if there is only 'Opening hours' item in `storefront__details__meta`
+    if ($('.storefront__details__meta dd').length === 2) {
+      $('.storefront__details__meta').addClass('is-storefront-details-meta-one');
+    }
 
     // Run 'Flexslider' plugin
     $(window).load(function() {
