--- a/app/assets/stylesheets/partials/modules/_timeline.scss
+++ b/app/assets/stylesheets/partials/modules/_timeline.scss
@@ -14,6 +14,36 @@
   position: relative;
   @include to-rem(padding-left, 115);
 
+  > dt {
+    /* Gives it a bit of spacing between each sets of date */
+    @include to-rem(margin-top, $spacing-base);
+
+    &:first-child {@include to-rem(margin-top, 0);}
+
+    /* More spacing between each sets of date at this breakpoint */
+    @include respond-min($non-palm) {
+      @include to-rem(margin-top, $spacing-dbl);
+    }
+
+    /* Line connecting `.timeline__date` */
+    &:before {
+      content: "";
+      display: block;
+      @include to-rem(width, 4);
+      /* Allows the line to sit under `.timeline__date` */
+      z-index: 1;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      /* left = `.timeline__date` left position + (`.timeline__date` width / 2) + (width of line / 2) */
+      @include to-rem(left, 51);
+      background-color: $color-off-white;
+    }
+
+    /* Hide the line if there's only 1 instance of the date */
+    &:only-of-type:before {display: none;}
+  }
+
   /* Start & finish times */
   > dd {
     background-color: $color-grey-3;
@@ -27,17 +57,18 @@
 
   /* Date */
   .timeline__date {
+    /* Allows the date to sit on top of the line */
+    z-index: 2;
     position: absolute;
-    top: 0;
     @include to-rem(left, 15);
-    background-color: black;
-    color: white;
+    background-color: #000;
+    color: #fff;
     text-align: center;
     border-radius: 50%;
     text-transform: uppercase;
     @include to-rem(padding-top, 18);
-    @include to-rem(width, 75);
-    @include to-rem(height, 75);
+    @include to-rem(width, 76);
+    @include to-rem(height, 76);
     @include font-size($font-size);
     font-weight: normal;
 
