--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -32,9 +32,10 @@
 
   /* --Set fixed widths for each detail view at these breakpoints-- */
 
-  /* Event */
+  /* Event and Movie */
   @include respond-min($ipad-portrait) {
-    &.detail-view--event {@include to-rem(width, 680);}
+    &.detail-view--event,
+    &.detail-view--movie {@include to-rem(width, 680);}
   }
 
   /* Deal */
@@ -92,6 +93,13 @@
 
     /* Fine print */
     .detail-view__desc--fine-print {@include font-size($font-size-milli, 1.5);}
+
+  /* Schedule */
+  .detail-view__schedule {
+    @include to-rem(padding-bottom, 40);
+
+    abbr {border-bottom: 0;}
+  }
 }
 
   /* --Global-- */
@@ -364,11 +372,6 @@
     /* Main image */
     .detail-view__media {text-align: center;}
 
-    /* Schedule */
-    .detail-view__schedule {
-      @include to-rem(padding-bottom, 40);
-    }
-
     /* Meta */
     .detail-view__meta li {
       width: 50%;
@@ -380,4 +383,11 @@
         text-align: right;
       }
     }
+  }
+
+  /* Movie */
+  .detail-view--movie {
+
+    /* Copy explaining to users how to purchase ticket */
+    .detail-view__schedule p {@extend %mrg-base;}
   }
