--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,18 @@
-<h2 class="hide-visually">Session Times</h2>
+<% content_for :hero_intro do %>
+  <div class="hero__intro">
+    <%# [BACKEND] Add link to store details %>
+    <a href="#" class="btn btn--main"><span class="icon icon--store icon--xlrg icon--spacing" aria-hidden="true"></span> Store Details</a>
+  </div>
+<% end %>
 
-<%# Tabs %>
-<div class="tabs">
+<h2 class="hide-visually">Session Times</h2>
 
   <%# Nav contextual %>
   <div class="nav-contextual js-nav-contextual">
     <div class="nav-contextual__clip">
       <div class="nav-contextual__clip__inner">
         <ul class="nav-contextual__list tab__nav horiz-list js-nav-contextual-list">
-          <%# TODO: add <!-- --> to remove white %>
+          <%# [BACKEND] Need to add <!-- --> between `li` to remove white space %>
           <% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %>
             <li><%= day %></li>
           <% end %>
@@ -25,94 +29,24 @@
   <% end -%>
   <%# //Nav contextual %>
 
-  <%# Movies %>
-  <div id="tab-" class="tab__content is-active">
-
-    <%# Movies - row 1 %>
-    <ul class="grid grid--mrg-base-non-palm">
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="#">
-          <div class="box">
-            <img src="http://placehold.it/285x345" alt="">
-            <div class="islet island--non-palm">
-              <h3>Skyfall</h3>
-              <p>Next session at 10.15am</p>
+  <%# List of movies %>
+  <ul class="grid grid--mrg-base-non-palm">
+    <% @movies.each do |movie| %>
+      <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+        <article class="tile box" role="article">
+          <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
+            <div class="tile__image">
+              <%# [BACKEND] Use Cloudinary to limit the dimension of the image to be 290x350. Don't need to add `width` and `height` attribute in `img`  as it's responsive site %>
+              <img src="http://placehold.it/290x350" alt="Poster of movie: <%= movie.title %>">
             </div>
-          </div>
-        </a>
-      </li>
-       <li class="grid__item one-half non-palm-one-quarter">
-        <a href="#">
-          <div class="box">
-            <img src="http://placehold.it/285x345" alt="">
-            <div class="islet island--non-palm">
-              <h3>Skyfall</h3>
-              <p>Next session at 10.15am</p>
+            <div class="tile__meta">
+              <h3 class="tile__meta__hdr txt-truncate"><%= movie.title %></h3>
+              <%# [BACKEND] Add next session time and output 24 hour format in `datetime` attribute as indicated below %>
+              <p class="tile__meta__desc txt-truncate">Next session at <time datetime="[session time]">[SESSION TIME]</time></p>
             </div>
-          </div>
-        </a>
+          </a>
+        </article>
       </li>
-       <li class="grid__item one-half non-palm-one-quarter">
-        <a href="#">
-          <div class="box">
-            <img src="http://placehold.it/285x345" alt="">
-            <div class="islet island--non-palm">
-              <h3>Skyfall</h3>
-              <p>Next session at 10.15am</p>
-            </div>
-          </div>
-        </a>
-      </li>
-       <li class="grid__item one-half non-palm-one-quarter">
-        <a href="#">
-          <div class="box">
-            <img src="http://placehold.it/285x345" alt="">
-            <div class="islet island--non-palm">
-              <h3>Skyfall</h3>
-              <p>Next session at 10.15am</p>
-            </div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <%# //Movies - row 1 %>
-
-  </div>
-  <%# //Movies %>
-
-</div>
-<%# //Tabs %>
-
-
-<div id='store_info' style="display: none">
-  <%# retailer banner %>
-  <%= image_tag @cinema.store_front_image_url, alt:@cinema.name %>
-
-  <%# retailer logo %>
-  <img src="<%= @cinema.retailer_logo_url %>" alt="<%= @cinema.store_name %> logo">
-
-  <%# phone number %>
-  <span class="phone_number"><%= @cinema.phone_number %></span>
-
-  <%# email address %>
-  <span class="email_address"><%= @cinema.email_address %></span>
-
-  <%# Store map link? %>
-</div>
-
-<ul id="sessions">
-<% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %>
-  <li><%= day %></li>
-<% end %>
-</ul>
-
-<ul id="movies">
-<% @movies.each do |movie| %>
-  <li class="title">
-    <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
-      <%= image_tag ImageService.transform(ref: movie.image_url, width: 400, retina: true), alt: movie.title %>
-      <%= movie.title %>
-    </a>
-  </li>
-<% end %>
-</ul>
+    <% end %>
+  </ul>
+  <%# //List of movies %>
