--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,28 +1,71 @@
-<%# Large image %>
-<%= image_tag ImageService.transform(ref: @movie.image_url, width: 550, retina: true), alt: @movie.title %>
+<div itemscope itemtype="http://schema.org/Movie">
 
-<%# movie title %>
-<h1 class="title"><%= @movie.title %></h1>
+  <%# Movie details %>
+  <div class="island detail-view__divider">
 
-<%# Movie rating %>
-<p><%= @movie.classification %></p>
+    <header class="detail-view__mrg-base">
+      <%# Movie title %>
+      <h1 class="detail-view__hdr hn" itemprop="name">
+        <%= @movie.title %>
+      </h1>
+      <%# //Movie title %>
 
-<%# movie synopsis %>
-<p><%= @movie.synopsis %></p>
+      <%# Movie classification %>
+      <div class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm">
+        <em><%= @movie.classification %> rating</em>
+      </div>
+      <%# //Movie classification %>
+    </header>
 
-<%# session day list %>
-<ul id="day_filter">
-<% days(@movie_sessions.last['start_time'], @centre.code, params['date'], @movie.id).each do |day| %>
-  <li><%= day %></li>
-<% end %>
-</ul>
+    <h2 class="detail-view__hdr-sub hn">Synopsis</h2>
 
-<%# sessions for that day %>
-<%= render partial: "session_list", locals: { time_of_day: 'am', sessions: @morning_sessions }%>
-<%= render partial: "session_list", locals: { time_of_day: 'pm', sessions: @afternoon_sessions }%>
+    <%# Movie synopsis %>
+    <div class="detail-view__desc txt-formatted">
+      <p itemprop="description"><%= @movie.synopsis %></p>
+    </div>
+    <%# //Movie synopsis %>
 
-<%# key %>
-<ul>
-  <li class="gold_class">Gold Class</li>
-  <li class="la_premiere">La Premiere</li>
-</ul>
+  </div>
+  <%# //Movie details wrapper %>
+
+  <div class="detail-view__schedule island">
+    <h2 class="detail-view__hdr-sub hn">Session Times</h2>
+
+    <%# [BACKEND] Output the name of the cinema as indicated below %>
+    <p>Select a session to purchase tickets at [NAME OF CINEMA]</p>
+
+    <%# Session times %>
+    <dl class="timeline">
+      <dt>
+        <%# [BACKEND] Output the day of the week %>
+        Monday
+        <em class="timeline__date">
+          <%# [BACKEND] Output date, as well as the un-abbreviated version of the month as the value in the `title` attribute %>
+          <span>23</span> <abbr title="September">Sep</abbr>
+        </em>
+      </dt>
+      <dd>
+        <%# [BACKEND] Add link to the actual cinema's movie session page, like existing implementation %>
+        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+        <%# [BACKEND] Output special session within the square brackets [] if available for the time e.g. [Gold Class], [VMAX] %>
+        [Special Session]
+      </dd>
+      <dd>
+        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+      </dd>
+      <dt>
+        Tuesday
+        <em class="timeline__date">
+          <span>24</span> <abbr title="September">Sep</abbr>
+        </em>
+      </dt>
+      <dd>
+        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+      </dd>
+    </dl>
+    <%# //Session times %>
+
+  </div>
+  <%# //Movie details %>
+
+</div>
