Small pagination fixes

--- a/app/assets/stylesheets/partials/modules/_pagination.scss
+++ b/app/assets/stylesheets/partials/modules/_pagination.scss
@@ -96,3 +96,7 @@
 		color: $color-grey;
 		vertical-align: bottom;
 	}
+
+  /* */
+  .pagination__prev { float: left; }
+  .pagination__next { float: right; }
