--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -365,12 +365,15 @@
 
   <nav role="navigation" aria-label="Pagination" ng-if="!products.loading" ng-controller="ProductPaginationController">
     <ul class="pagination horiz-list mrg-dbl--top">
-        <li ng-if="has_prev()" ng-click="prev()">
-          <button class="pagination__btn btn" rel="prev">Prev<span class="hide-visually">ious page</span></button>
-        </li><!--
-        --><li ng-if="has_next()" ng-click="next()">
-          <button class="pagination__btn btn" rel="next">Next<span class="hide-visually"> page</span></button>
-        </li>
+      <li class="pagination__prev">
+        <button ng-if="has_prev()" ng-click="prev()" class="pagination__btn btn" rel="prev">Prev<span class="hide-visually">ious page</span></button>
+      </li><!--
+      --><li>
+        {{page()}} of {{totalPages()}}
+      </li><!--
+      --><li class="pagination__next">
+        <button ng-if="has_next()" ng-click="next()" class="pagination__btn btn" rel="next">Next<span class="hide-visually"> page</span></button>
+      </li>
     </ul>
   </nav>
 
