--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -40,7 +40,12 @@
       	<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
 		      <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
 		        <% @centres[state].each do |centre| %>
-		          <li><a class="container h1" href="<%= centre_path( centre ) %>"><%= centre.short_name %><span class="icon icon--arrow-right-big icon--flush-top" aria-hidden="true"></span></a></li>
+		          <li>
+                <%= link_to url_for({:centre_id => centre.code }.merge(params)), class: 'container h1' do %>
+                  <%= centre.short_name %>
+                  <span class="icon icon--arrow-right-big icon--flush-top" aria-hidden="true"></span>
+                <% end %>
+              </li>
 		        <% end %>
 		      </ul>
 		    <% end %>
@@ -59,7 +64,7 @@
       				<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
 	          		<dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
 		        		<% @centres[state].each do |centre| %>
-	          			<dd class="drop-down-menu__divider"><%= link_to centre.short_name, centre_path( centre ), class: 'btn btn--full btn--full-left' %></dd>
+	          			<dd class="drop-down-menu__divider"><%= link_to centre.short_name, url_for({:centre_id => centre.code }.merge(params)), class: 'btn btn--full btn--full-left' %></dd>
 	          		<% end %>
 	          	<% end %>
           	</dl>
