--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,21 +1,27 @@
-<div itemscope itemtype="http://schema.org/Movie">
+<div itemscope itemtype="http://data-vocabulary.org/Event">
 
   <%# Movie details %>
   <div class="island detail-view__divider">
 
     <header class="detail-view__mrg-base">
       <%# Movie title %>
-      <h1 class="detail-view__hdr hn" itemprop="name">
+      <h1 class="detail-view__hdr hn" itemprop="summary">
         <%= @movie.title %>
       </h1>
       <%# //Movie title %>
 
       <%# Movie classification %>
       <div class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm">
-        <em><%= @movie.classification %> rating</em>
+        <em></em>><%= @movie.classification %> rating</em>
       </div>
       <%# //Movie classification %>
     </header>
+
+    <%# Movie main image %>
+    <div class="detail-view__media detail-view__mrg-base">
+      <img src="http://placehold.it/600x400" alt="Screenshot of <%= @movie.title %>" itemprop="photo">
+    </div>
+    <%# //Movie main image %>
 
     <h2 class="detail-view__hdr-sub hn">Synopsis</h2>
 
@@ -45,13 +51,13 @@
         </em>
       </dt>
       <dd>
-        <%# [BACKEND] Add link to the actual cinema's movie session page, like existing implementation %>
-        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+        <%# [BACKEND] Add link to the actual cinema's movie session page, like existing implementation. Also output the time as ISO date format (the session time in the movie feed we get) %>
+        <time datetime="2013-09-23T09:00:00" itemprop="startDate"><a href="#" rel="external">09:00am</a></time>
         <%# [BACKEND] Output special session within the square brackets [] if available for the time e.g. [Gold Class], [VMAX] %>
         [Special Session]
       </dd>
       <dd>
-        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+        <time datetime="2013-09-23T09:00:00" itemprop="startDate"><a href="#" rel="external">09:00am</a></time>
       </dd>
       <dt>
         Tuesday
@@ -60,7 +66,7 @@
         </em>
       </dt>
       <dd>
-        <time datetime="09:00"><a href="#" rel="external">09:00am</a></time>
+        <time datetime="2013-09-24T09:00:00" itemprop="startDate"><a href="#" rel="external">09:00am</a></time>
       </dd>
     </dl>
     <%# //Session times %>
